# OpenPrinterAgent-ESC-POS

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg
src/: __init__.py  main.py
src/api/: __init__.py  app.py
src/api/middleware/: __init__.py  auth.py
src/api/routes/: __init__.py  print_jobs.py  printers.py  status.py
src/api/schemas/: __init__.py  validators.py
src/core/: __init__.py  entities.py  exceptions.py
src/drivers/: __init__.py  base.py  driver_factory.py  escpos_protocol.py  serial_driver.py  usb_driver.py
src/gui/: __init__.py  app.py  services.py
src/gui/components/: __init__.py
src/gui/frames/: __init__.py  jobs_frame.py  print_frame.py  printer_frame.py
src/models/: __init__.py  database.py
src/services/: __init__.py  job_service.py  print_service.py  printer_service.py
src/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_database.py  test_drivers.py  test_entities.py  test_escpos_protocol.py  test_job_service.py  test_print_service.py  test_printer_service.py
