[metadata]
name = openprinteragent
version = 0.1.0
description = Open source desktop application for ESC/POS thermal printer control with REST API
long_description = file: docs/README.md
long_description_content_type = text/markdown
license = MIT
author = OpenPrinterAgent Team
author_email = team@openprinteragent.dev
url = https://github.com/openprinteragent/openprinteragent
project_urls =
    Bug Tracker = https://github.com/openprinteragent/openprinteragent/issues
    Documentation = https://github.com/openprinteragent/openprinteragent/docs
    Source Code = https://github.com/openprinteragent/openprinteragent
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    Flask>=3.1.2
    flask-cors>=4.0.0
    python-escpos>=3.1
    pyserial>=3.5
    pyusb>=1.3.1
    pillow>=12.0.0
    python-barcode>=0.16.1
    qrcode>=8.2
    customtkinter>=5.2.2
    pyinstaller>=6.17.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    openprinteragent = src.main:main
    openprinteragent-api = src.main_api:main

[flake8]
max-line-length = 100
exclude =
    .venv,
    __pycache__,
    build,
    dist,
    .eggs,
    *.egg-info,
    .git,
    .github
ignore = E501,W503,E203
per-file-ignores =
    __init__.py:F401
    tests/*:S101

[isort]
profile = ruff
known_first_party = src
line_length = 100
